--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -16,10 +16,10 @@
 .hero-unit {
   position: relative;
   padding: 30px 15px;
-  color: #F5F5F5;
+  color: #FFFFFF;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+  background: #333333;
 }
 
 .navbar-text {
