--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,3 @@
 <div class="container">
-  <p>Angular Fullstack v2.0.13 |
-    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
-  </p>
+  <p>MBC Manager v0.0.1 | 2015</p>
 </div>
